# document_service

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  Target-Architecture-Overview.md  conftest.py  docker-compose.yml  manage.py  postman_collection.json  pyproject.toml  render.yaml  test_api.py  test_simple.py
api/: urls.py  views.py
document_service/: asgi.py  routing.py  settings.py  urls.py  views.py  wsgi.py
document_service/tests/: conftest.py  test_api_views.py  test_settings.py  test_views.py
documents/: admin.py  api_client.py  change_operations.py  consumers.py  content_diff.py  exceptions.py  forms.py  models.py  operational_transforms.py  serializers.py  services.py  urls.py  utils.py  views.py
documents/migrations/: 0001_initial.py  0002_document_last_modified_by_documentchange.py  0003_add_search_vector.py  0004_populate_search_vectors.py
documents/tests/: conftest.py  test_api_client.py  test_autosave.py  test_content_diff.py  test_forms.py  test_integration.py  test_models.py  test_operational_transforms.py  test_search.py  test_search_management_commands.py  test_serializers.py  test_services.py  test_urls.py  test_views.py  test_web_views.py  test_websockets.py
performance_tests/: README.md  __init__.py  conftest.py  pytest.ini  test_large_documents.py  test_search_performance.py
performance_tests/reports/: .gitkeep  search_baseline_1754373424.json  search_baseline_1754373569.json  search_baseline_1754403590.json  search_baseline_1754404859.json
performance_tests/utils/: __init__.py  (+3 more)
templates/: base.html
(+13 files in other folders)
