[tool.poetry]
name = "document-service"
version = "0.1.0"
description = "Django document service"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
Django = "^4.2.7"
dj-database-url = "^2.1.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.7"
redis = "^5.0.1"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.3.1"
django-crispy-forms = "^2.0"
crispy-bootstrap5 = "^0.7"
channels = "^4.0.0"
channels-redis = "^4.1.0"
daphne = "^4.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-django = "^4.5.0"
pytest-asyncio = "^0.21.1"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "document_service.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"